# booleval

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  main.cpp
benchmark/src/: CMakeLists.txt  booleval_benchmark.cpp
examples/: CMakeLists.txt  evaluator.cpp
include/: base_token.h  evaluator.h  tokenizer.h
include/booleval/: base_token.h  evaluator.h  evaluator.hpp  exceptions.hpp  field.hpp  object.h  result.hpp  token.h  tokenizer.h  tree_node.h
include/booleval/node/: base_visitor.h  result_visitor.h  tree_node.h
include/booleval/nodes/: and_node.h  base_node.h  eq_node.h  gt_node.h  lt_node.h  neq_node.h  or_node.h
include/booleval/token/: base_token.h  field_token.h  token.h  token.hpp  token_type.h  token_type.hpp  token_type_utils.hpp  tokenizer.h  tokenizer.hpp
include/booleval/tree/: base_visitor.h  expression_tree.h  expression_tree.hpp  node.hpp  result_visitor.h  result_visitor.hpp  tree.hpp  tree_node.h  tree_node.hpp
include/booleval/utils/: algo_utils.h  algo_utils.hpp  algorithm.hpp  any_mem_fn.h  any_mem_fn.hpp  any_value.h  any_value.hpp  regex_pattern.h  split_options.hpp  split_range.h  split_range.hpp  string_utils.h  string_utils.hpp
src/: CMakeLists.txt  base_token.cpp  evaluator.cpp  object.cpp  token.cpp  tokenizer.cpp  tree_node.cpp
src/node/: result_visitor.cpp  tree_node.cpp
src/nodes/: and_node.cpp  eq_node.cpp  gt_node.cpp  lt_node.cpp  neq_node.cpp  or_node.cpp
src/token/: base_token.cpp  token.cpp  token_type.cpp  tokenizer.cpp
src/tree/: expression_tree.cpp  result_visitor.cpp  tree_node.cpp
src/utils/: any_value.cpp  regex_pattern.cpp  string_utils.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  evaluator_test.cpp  fuzz.cpp  token_test.cpp  tokenizer_test.cpp  tree_node_test.cpp
tests/src/node/: tree_node_test.cpp
tests/src/token/: base_token_test.cpp  field_token_test.cpp  token_test.cpp  tokenizer_test.cpp
tests/src/tree/: expression_tree_test.cpp  node_test.cpp  result_visitor_test.cpp  tree_node_test.cpp  tree_test.cpp
tests/src/utils/: algo_utils_test.cpp  algorithm_test.cpp  any_mem_fn_test.cpp  any_value_test.cpp  regex_pattern_test.cpp  split_range_test.cpp  string_utils_test.cpp
